[package]
authors = [""]
edition = "2018"
name = "rust-sycamore-halfmoon-framework"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.14"
sycamore = "0.6.2"
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"

[dependencies.web-sys]
features = ["HtmlInputElement", "InputEvent", "HtmlElement", "DomTokenList", "Element"]
version = "0.3.55"
