[package]
authors = [""]
edition = "2018"
name = "rust-sycamore-halfmoon-framework"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"
sycamore = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
chrono = { version = "0.4", features = ["wasmbind"]}

[dependencies.web-sys]
features = [
    "HtmlInputElement", 
    "InputEvent", 
    "HtmlElement", 
    "DomTokenList", 
    "Element", 
    "Document", 
    "Window", 
    "HtmlDocument", 
    "MediaQueryList",
    "Window",
    "EventListener"]
version = "0.3"
